# polyfill-rs

./: .env.example  .gitignore  .spellcheck.yml  API_PARITY_REPORT.md  Cargo.toml  MIGRATION_GUIDE.md  README.md  clippy.toml  rustfmt.toml  tarpaulin-report.html
.github/workflows/: ci.yml
benches/: book_updates.rs  comparison_benchmarks.rs  fill_processing.rs  hft_loop.rs  network_benchmarks.rs  ws_hot_path.rs
docs/: TESTING.md
examples/: advanced_network_optimizations.rs  authenticated_benchmark.rs  benchmark_demo.rs  benchmark_with_keepalive.rs  coinbase_btc.rs  compare_payload_sizes.rs  complete_trading_example.rs  comprehensive_demo.rs  demo.rs  env_example.rs  fee_test.rs  final_benchmark.rs  honest_comparison_benchmark.rs  http2_tuning_benchmark.rs  http_transport_matrix.rs  live_submit_path_benchmark.rs  memory_benchmark.rs  network_optimization_test.rs  network_timing_test.rs  official_client_side_by_side_benchmark.rs  performance_benchmark.rs  profile_latency.rs  proper_auth_benchmark.rs  quick_demo.rs  real_network_benchmark.rs  side_by_side_benchmark.rs  simple_network_benchmark.rs  snipe.rs  test_burst_requests.rs  test_connection_reuse.rs  test_prewarmed.rs  test_simd_json.rs  test_user_ws.rs
scripts/: benchmark_comparison.sh  network_benchmark.sh  run_demo.sh  run_integration_tests.sh
src/: auth.rs  book.rs  buffer_pool.rs  client.rs  config.rs  connection_manager.rs  decode.rs  dns_cache.rs  errors.rs  fees.rs  fill.rs  http_config.rs  lib.rs  orders.rs  stream.rs  transport.rs  types.rs  utils.rs  ws_hot_path.rs
src/coinbase/: decode.rs  mod.rs  stream.rs  types.rs
tests/: integration_tests.rs  no_alloc_hot_paths.rs  order_posting_test.rs  prices_history_integration_tests.rs  simple_auth_test.rs  ws_integration_tests.rs
tests/common/: mod.rs
tests/fixtures/: clob_market_info_fee_enabled.json  clob_market_info_fee_free.json
